--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,23 +1,11 @@
 {
   "current": {
+    "colors_accent_1": "#ff7012",
     "type_header_font": "montserrat_n4",
     "type_body_font": "montserrat_n4",
     "sections": {
       "announcement-bar": {
         "type": "announcement-bar",
-        "blocks": {
-          "announcement-bar-0": {
-            "type": "announcement",
-            "settings": {
-              "text": "Welcome to our store",
-              "color_scheme": "accent-1",
-              "link": ""
-            }
-          }
-        },
-        "block_order": [
-          "announcement-bar-0"
-        ],
         "settings": {
         }
       },
@@ -25,6 +13,7 @@
         "type": "header",
         "settings": {
           "full_width": true,
+          "logo": "shopify:\/\/shop_images\/Jevelin_logo_dark.png",
           "logo_width": 100,
           "logo_position": "middle-left",
           "menu": "main-menu",
@@ -38,8 +27,8 @@
           "footer-0": {
             "type": "link_list",
             "settings": {
-              "heading": "Quick links",
-              "menu": "footer"
+              "heading": "",
+              "menu": ""
             }
           }
         },
